# netforge

./: .gitignore  CLAUDE.md  LICENSE  README.md  demo.html  pyproject.toml  transpiler-v2_2-WITH-KEY-MANAGER (1).html  transpiler-v3_0-PROFESSIONAL.html  transpiler-v3_1.html
.claude/: settings.local.json
docs/: CNAME  demo.html  index.html
netforge/: __init__.py  __main__.py  detector.py  models.py
netforge/parsers/: allied.py  hp.py
netforge/renderers/: allied.py  hp.py
tests/: conftest.py  test_allied_parser.py  test_hp_parser.py  test_renderers.py
tests/fixtures/: allied_sample.txt  hp_sample.txt
